# PySide2-stubs

./: .gitignore  CHANGELOG.md  CHANGE_LOG.md  CONTRIBUTING.md  README.md  TODO.txt  dev-requirements.txt  setup.cfg  setup.py  update_latest_pyside2.py  version.py
PySide2-stubs/: Qt3DAnimation.pyi  Qt3DCore.pyi  Qt3DExtras.pyi  Qt3DInput.pyi  Qt3DLogic.pyi  Qt3DRender.pyi  QtAxContainer.pyi  QtCharts.pyi  QtConcurrent.pyi  QtCore.pyi  QtDataVisualization.pyi  QtGui.pyi  QtHelp.pyi  QtLocation.pyi  QtMacExtras.pyi  QtMultimedia.pyi  QtMultimediaWidgets.pyi  QtNetwork.pyi  QtOpenGL.pyi  QtOpenGLFunctions.pyi  QtPositioning.pyi  QtPrintSupport.pyi  QtQml.pyi  QtQuick.pyi  QtQuickControls2.pyi  QtQuickWidgets.pyi  QtRemoteObjects.pyi  QtScript.pyi  QtScriptTools.pyi  QtScxml.pyi  QtSensors.pyi  QtSerialPort.pyi  QtSql.pyi  QtSvg.pyi  QtTest.pyi  QtTextToSpeech.pyi  QtUiTools.pyi  QtWebChannel.pyi  QtWebEngine.pyi  QtWebEngineCore.pyi  (+9 more)
scripts/: README_scripts.md  apply_qflags_behavior.py  apply_qflags_types.py  apply_signals.py  args-qcursor.json  auto-conversion-qbrush.json  auto-conversion-qcolor.json  class-signals.json  collect_qflags_behavior.py  collect_qflags_types.py  collect_signals.py  fix_arg_qcursor.py  fix_auto_conversion_qbrush.py  fix_auto_conversion_qcolor.py  fix_auto_conversion_qcursor.py  fix_toplevel_staticmethod.py  qflags-behavior.json  qflags-types.json  utils.py  verify_qflag_behavior.py
shiboken2-stubs/: __init__.pyi
tests/: alignment_flag.py  property.py  qaction.py  qapplication.py  qbytearray.py  qcoreapplication.py  qdialogbuttonbox.py  qenum.py  qfiledialog.py  qflag.py  qgraphicsitem.py  qgraphicsview.py  qicon.py  qlayout.py  qlistwidget.py  qlistwidgetitem.py  qmenu.py  qmessagebox.py  qmlregistertype.py  qobject.py  qpainter.py  qpixmap.py  qpolyon.py  qprocess.py  qprogressdialog.py  qquickitem.py  qsplitter.py  qtabbar.py  qtcore_functions.py  qtimer.py  qtreewidget.py  qtreewidgetitem.py  qversion.py  qwidget.py  qwindow.py  slot.py  (+6 more)
(+2 files in other folders)
