[metadata]
name = PySide2-stubs
author = Philippe Fremy
author_email = phil.fremy@free.fr
description = PEP561 stub files for the *PySide2/Qt5 for Python* framework
long_description = file: README.md
long_description_content_type = text/markdown
version = attr: version.PYSIDE2_STUB_VERSION
license = LGPL v2.1
url = https://github.com/python-qt-tools/PySide2-stubs
project_urls =
    Bug Tracker = https://github.com/bluebird75/pyside2-stubs/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)
    Operating System :: OS Independent
    Intended Audience :: Developers
    Typing :: Stubs Only

[options]
package_dir =
   PySide2-stubs = PySide2-stubs
python_requires = >=3.6
install_requires =
    mypy>=0.930
    PySide2

[options.package_data]
* = *.pyi

[options.packages.find]
exclude =
    tests*
    version.py
    update_latest_pyside2.py


[options.extras_require]
dev =
    pytest